--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.12",
     "web-push": "^3.6.7"
   }
 }
